# good-knight

./: .env.example  .gitignore  AGENTS.md  README.md  goodnight-bot.service  pyproject.toml
data/: train.txt
scripts/: train_model.py
src/goodnight_bot/: config.py  detector.py  handler.py  main.py
src/goodnight_bot/detectors/: __init__.py  base.py  fasttext.py  regex.py
src/goodnight_bot/replies/: base.py  predefined.py  template.py
